Fri Nov  2 17:31:43 2001  Gary Wong  <gtw@research.att.com>

	* configure.in: Automatically detect whether -ieee is required in
	CFLAGS.

Fri Nov  2 13:10:45 2001  Gary Wong  <gtw@research.att.com>

	* gnubg.c (CommandRollout): Make sure a game is being played for
	"rollout =cube".

	* gnubg.c (PlayerCompletion): New function.  Implement completion
	for player name parameters (not yet finished).

	* gnubgtest: Added more tests.

	* show.c (ShowCommands): Increase buffer size.

Thu Nov  1 14:25:39 2001  Gary Wong  <gtw@research.att.com>

	* rollout.c (BasicCubefulRollout): Keep track of unfinished games;
	exit loop when all games are finished.

Thu Nov  1 10:43:49 2001  Gary Wong  <gtw@research.att.com>

	* analysis.c (AnalyzeMove, AnalyzeGame, CommandAnalyseMatch): Handle
	interruptions/errors.
	* eval.c (FindnSaveBestMoves): Clean up *pml when reporting
	interruption/error.
	
	* database.c, external.c, gnubg.c, latex.c, postscript.c, sgf.c: Call
	NextToken to dequote filename parameters.
	* gtkgame.c (FileCommand): Quote the specified filename.
	* gnubg.c (NextToken): Change the quote character from `\' to `%' on
	MS DOS/Windows.

	* gtkboard.c (board_quick_edit): New function.  Revise edit mode
	(contributed by John Chuang).
	
Wed Oct 31 14:00:12 2001  Gary Wong  <gtw@research.att.com>

	* gtk-multiview.c (gtk_multiview_expose): Eliminate redundant function
	under GTK 1.3/2.0.

Wed Oct 31 10:59:18 2001  Gary Wong  <gtw@research.att.com>

	* gtkboard.c, gtkgame.c: Work on support for GTK 1.3/2.0.  Several bugs
	remain.

Tue Oct 30 11:10:58 2001  Gary Wong  <gtw@research.att.com>

	* eval.h: Change several members of evalcontext to bitfields.
	
	* eval.c (EvaluatePositionCache): Cache evaluations above 0-ply in
	matches.
	(LogCube): New function.

	* gnubg.c (NextToken): Implement quoting rules.

	* gtkgame.c: Change page_size parameter of gtk_adjustment_new() calls
	to 0 where appropriate.

	* play.c (ComputerTurn): Don't bother to consider resigning in